--- a/Tmenu/pages/myRecord/myRecord.wxss
+++ b/Tmenu/pages/myRecord/myRecord.wxss
@@ -351,3 +351,18 @@
     color: #bfbfbf;
     background: #f2f2f2;
 }
+.show-more {
+    padding: 24rpx 0;
+    margin-top: 20rpx;
+    font-size: 24rpx;
+    color: #333;
+    font-weight: bold;
+    text-align: center;
+    background: #fff;
+}
+.text-mid{
+    font-size: 28rpx;
+}
+.txt-gray{
+    color: #999;
+}
