--- a/Tmaster/Tmaster/app.wxss
+++ b/Tmaster/Tmaster/app.wxss
@@ -8,3 +8,17 @@
   padding: 200rpx 0;
   box-sizing: border-box;
 } 
+.page-container{
+    display: block;
+    width: 100%;
+}
+page{
+    background: #fdfdfd;
+}
+
+.page-foot{
+    padding: 110rpx 0 40rpx 0;
+    font-size: 20rpx;
+    text-align: center;
+    color: #ccc;
+}
