--- a/Tmaster/Tmaster/pages/register/register.wxss
+++ b/Tmaster/Tmaster/pages/register/register.wxss
@@ -1,1 +1,82 @@
 /* pages/register/register.wxss */
+
+.page-head {
+    display: flex;
+    flex-direction: column;
+    background: #509863;
+}
+
+.page-body {
+    padding-top: 162rpx;
+}
+
+.logo-box {
+    display: flex;
+    justify-content: center;
+    padding: 86rpx 0 94rpx 0;
+}
+
+.logo-img {
+    width: 130rpx;
+    height: 100rpx;
+}
+
+.lang-img {
+    width: 100%;
+    height: 90rpx;
+}
+
+.input-img {
+    width: 34rpx;
+    height: 34rpx;
+}
+
+.form-box {
+    display: flex;
+    flex-direction: column;
+    padding: 0 140rpx;
+}
+
+.section {
+    display: flex;
+    align-items: center;
+    border: 2rpx solid #d6d6d6;
+    height: 78rpx;
+    border-radius: 39rpx;
+    padding-left: 30rpx;
+}
+
+.section__title{
+    display: flex;
+    align-items: center;
+}
+.pwd-input-box {
+    margin-top: 25rpx;
+    margin-bottom: 88rpx;
+}
+
+.input-txt {
+    margin-left: 22rpx;
+    font-size: 28rpx;
+}
+
+.login-btn {
+    height: 78rpx;
+    line-height: 78rpx;
+    border-radius: 39rpx;
+    background: #519863;
+    font-size: 30rpx;
+    color: #fff;
+    letter-spacing: 54rpx;
+    text-align: center;
+    padding-left: 78rpx;
+    box-sizing: content-box;
+}
+
+.login-btn::after {
+    border: 0;
+}
+.login-btn:active{
+    color: #ddd;
+    background: #447f53;
+}
