--- a/Tmenu/pages/filter/filter.wxml
+++ b/Tmenu/pages/filter/filter.wxml
@@ -1,4 +1,2 @@
 <!--pages/filter/filter.wxml-->
-<text style="position:absolute;top:45%;left:50%;transform:translate(-50%,-50%);white-space:nowrap;">
-    {{error_txt}}
-</text>
+<view class="page-container" style="position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,.5)"></view>
