--- a/Tmenu/pages/menu/menu.wxss
+++ b/Tmenu/pages/menu/menu.wxss
@@ -1,7 +1,7 @@
-
-page{
+page {
     background: #fff;
 }
+
 .page-container {
     width: 100%;
     display: flex;
@@ -53,9 +53,8 @@ page{
     font-size: 20rpx;
 }
 
-
 .arrow {
-    bottom: -10rpx;
+    top: 10rpx;
     right: -10rpx;
     position: relative;
 }
@@ -672,11 +671,11 @@ swiper-item {
     box-sizing: border-box;
 }
 
-.minus-num::before{
+.minus-num::before {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);    
+    transform: translate(-50%, -50%);
     content: "";
     display: block;
     width: 60%;
@@ -694,11 +693,11 @@ swiper-item {
     box-sizing: border-box;
 }
 
-.plus-num::before{
+.plus-num::before {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);    
+    transform: translate(-50%, -50%);
     content: "";
     display: block;
     width: 60%;
@@ -706,18 +705,17 @@ swiper-item {
     background: #fff;
 }
 
-.plus-num::after{
+.plus-num::after {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);    
+    transform: translate(-50%, -50%);
     content: "";
     display: block;
     width: 4rpx;
     height: 60%;
     background: #fff;
 }
-
 
 .x-y-center-minus {
     position: relative;
@@ -738,9 +736,11 @@ swiper-item {
     display: block;
     height: 178rpx;
 }
-.get-coupon{
+
+.get-coupon {
     color: rgba(0, 0, 0, 0.5);
 }
- .bc-gray{
+
+.bc-gray {
     background: #d2d2d2;
-} 
+}
