--- a/Tmaster/Tmaster/pages/reportDetail/reportDetail.wxml
+++ b/Tmaster/Tmaster/pages/reportDetail/reportDetail.wxml
@@ -16,25 +16,27 @@
                     </view>
                     <view class="detail-box">
                         <view class="detail-title light-gray txt-s">收款笔数</view>
-                        <view class="detail-price mid-gray txt-m">7</view>
+                        <view class="detail-price mid-gray">7</view>
                     </view>
                     <view class="detail-box">
                         <view class="detail-title light-gray txt-s">单笔均价</view>
-                        <view class="detail-price mid-gray txt-m">1542.88</view>
+                        <view class="detail-price mid-gray">1542.88</view>
                     </view>
                 </view>
             </view>
             <view class="bottom-box">
                 <view class="cust-anly">
                     <view class="anly-title light-gray txt-s">顾客属性分析</view>
-                    <view class="anly-progress"></view>
+                    <view class="anly-progress">
+                        <view class='anly-progress-val'></view>
+                    </view>
                     <view class="anly-cust-detail">
                         <view class="cust">
-                            <view class="cust-title mid-gray txt-s">新顾客</view>
+                            <view class="cust-title mid-gray txt-s">新顾客：</view>
                             <view class="cust-num x-gray txt-l">4</view>
                         </view>
                         <view class="cust">
-                            <view class="cust-title mid-gray txt-s">老顾客</view>
+                            <view class="cust-title mid-gray txt-s">老顾客：</view>
                             <view class="cust-num x-gray txt-l">1</view>
                         </view>
                     </view>
