--- a/Tmenu/pages/hbRecord/hbRecord.wxml
+++ b/Tmenu/pages/hbRecord/hbRecord.wxml
@@ -1,3 +1,4 @@
+<import src="../tpl/footer.wxml" />
 <view class="page-container">
     <view class="page-head">
         <view class="bc-box">
@@ -57,5 +58,5 @@
             <view class="show-more txt-gray" wx:if="{{hb_out_list.length>0?false:true}}">暂无数据</view>
         </view>
     </view>
-    <view class="page-foot">©伯格网络提供支持</view>
+    <template is="foot"/>
 </view>
