--- a/Tmenu/pages/index/index.wxml
+++ b/Tmenu/pages/index/index.wxml
@@ -1,4 +1,5 @@
 <!--index.wxml-->
+<import src="../tpl/footer.wxml"/>
 <view class="page-container">
     <view class="page-section" animation="{{animationData}}">
         <view class="shop-info">
@@ -156,9 +157,7 @@
             </swiper>
 
         </view>
-        <view class="foot">
-            © 伯格网络提供支持
-        </view>
+        <template is="foot"/>
     </view>
 
     <view class="modal {{show_copy_modal?'':'hide-modal'}}">
