--- a/Tmaster/Tmaster/pages/tpl/template.wxml
+++ b/Tmaster/Tmaster/pages/tpl/template.wxml
@@ -4,5 +4,8 @@
 
 <!-- 页脚伯格网络支持 -->
 <template name="page-foot">
-    <view class="page-foot">©伯格网络提供支持</view>
+    <view class="page-foot">
+        <view class='copy'>©伯格网络提供支持</view>
+        <view class='service-tel'>服务热线：150-8485-2913</view>
+    </view>
 </template>
